--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>PogChamp</title>
 </head>
 <body>
-    <iframe width="1600" height="900" src="https://www.youtube-nocookie.com/embed/apPsjYs6HmE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="device-width" height="device-height" src="https://www.youtube-nocookie.com/embed/apPsjYs6HmE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
