--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PogChamp</title>
+    <title>Funee Monkee Gif</title>
+    <meta property="og:title" content="Funee Monkee Gif" />
+    <meta property="og:type" content="video.movie" />
+    <meta property="og:url" content="https://www.youtube.com/watch?v=apPsjYs6HmE" />
+    <meta property="og:image" content="./funeemonkee.jpg" />
+    <title>Funee Monkee Gif</title>
 </head>
 <body>
     <iframe width="1600" height="900" src="https://www.youtube-nocookie.com/embed/apPsjYs6HmE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <img src="./funeemonkee.jpg" alt="funee monkee" hidden=1>
 </body>
 </html>
