--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Funee Monkee Gif</title>
     <meta property="og:title" content="Funee Monkee Gif" />
-    <meta property="og:type" content="video.movie" />
-    <meta property="og:url" content="https://www.youtube.com/watch?v=apPsjYs6HmE" />
+    <meta property="og:type" content="movie" />
+    <meta property="og:url" content="./funeemonkee.mp4" />
     <meta property="og:image" content="./funeemonkee.jpg" />
     <title>Funee Monkee Gif</title>
 </head>
