--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Funee Monkee Gif</title>
     <meta property="og:title" content="Funee Monkee Gif" />
     <meta property="og:type" content="movie" />
-    <meta property="og:url" content="./funeemonkee.mp4" />
-    <meta property="og:image" content="./funeemonkee.jpg" />
+    <meta property="og:video" content="./funeemonkee.mp4" />
 </head>
 <body>
     <iframe width="1600" height="900" src="https://www.youtube-nocookie.com/embed/apPsjYs6HmE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
