--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Funee Monkee Gif</title>
-    <meta property="og:title" content="Funee Monkee Gif" />
-    <meta property="og:type" content="movie" />
-    <meta property="og:video" content="./funeemonkee.mp4" />
+    <meta property="og:url" content="https://colicool.github.io/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Funee Monkee Gif">
+    <meta property="og:description" content="">
+    <meta property="og:image" content="./funeemonkee.jpg">
 </head>
 <body>
     <iframe width="1600" height="900" src="https://www.youtube-nocookie.com/embed/apPsjYs6HmE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
