--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <meta property="og:image" content="./funeemonkee.jpg">
 </head>
 <body>
-    <iframe width="1600" height="900" src="https://www.youtube-nocookie.com/embed/apPsjYs6HmE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="95%" height="900" src="https://www.youtube-nocookie.com/embed/apPsjYs6HmE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <img src="./funeemonkee.jpg" alt="funee monkee" hidden=1>
+    <video src="./funeemonkee.mp4" hidden=1></video>
 </body>
 </html>
