--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ x = ["xqcow","ludwig","jellypeanut","5uppp"]
   };
   var i;
 for (i = 0; i < x.length-1; i++) {
-    var player = new Twitch.Player(`embed${i}`, `${options}${i}`);
+    var player = new Twitch.Player(`embed${i}`, `${options`${i}`}`);
 }
   
 </script>
