--- a/index.html
+++ b/index.html
@@ -93,11 +93,12 @@ x = ["xqcow","ludwig","jellypeanut","5uppp"]
     channel: x[9],
     parent: ["colicool.github.io"]
   };
+bruh = [options0,options1,options2,options3,options4,options5,options6,options7,options8,options9]
   var i;
-for (i = 0; i < x.length-1; i++) {
-    var player = new Twitch.Player(`embed${i}`, `${options`${i}`}`);
+for (i = 0; i < x.length; i++) {
+    var player = new Twitch.Player(`embed${i}`, bruh[i]);
 }
-  
+
 </script>
 
 </body>
