--- a/index.html
+++ b/index.html
@@ -13,29 +13,22 @@
 <body>
 
 <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
-<div> 
-    <div id="embed0"></div>
-    <div id="embed1"></div>
-    <div id="embed2"></div>
-</div>
-<br>
-<div> 
-    <div id="embed3"></div>
-    <div id="embed4"></div>
-    <div id="embed5"></div>
-</div>
-<br>
-<div>
-    <div id="embed6"></div>
-    <div id="embed7"></div>
-    <div id="embed8"></div>
-    <div id="embed9"></div>
-</div>
+
+<div style="width:33%"> <div id="embed0"></div></div>
+<div style="width:33%"> <div id="embed1"></div></div>
+<div style="width:33%"> <div id="embed2"></div></div><br>
+<div style="width:33%"> <div id="embed3"></div></div>
+<div style="width:33%"> <div id="embed4"></div></div>
+<div style="width:33%"> <div id="embed5"></div></div><br>
+<div style="width:33%"> <div id="embed6"></div></div>
+<div style="width:33%"> <div id="embed7"></div></div>
+<div style="width:33%"> <div id="embed8"></div></div>
+<div style="width:33%"> <div id="embed9"></div></div>
 <script type="text/javascript">
 x = ["xqcow","ludwig","jellypeanut","5uppp"]
   var options0 = {
-    width: "33%",
-    height: "33%",
+    width: "100%",
+    height: "100%",
     channel: x[0],
     parent: ["colicool.github.io"]
   };
