--- a/index.html
+++ b/index.html
@@ -14,16 +14,25 @@
 
 <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
 
-<div style="width:33%"> <div id="embed0"></div></div>
-<div style="width:33%"> <div id="embed1"></div></div>
-<div style="width:33%"> <div id="embed2"></div></div><br>
-<div style="width:33%"> <div id="embed3"></div></div>
-<div style="width:33%"> <div id="embed4"></div></div>
-<div style="width:33%"> <div id="embed5"></div></div><br>
-<div style="width:33%"> <div id="embed6"></div></div>
-<div style="width:33%"> <div id="embed7"></div></div>
-<div style="width:33%"> <div id="embed8"></div></div>
-<div style="width:33%"> <div id="embed9"></div></div>
+<div style="width:100%"> 
+    <div id="embed0" style="width:33%"></div>
+    <div id="embed1" style="width:33%"></div>
+    <div id="embed2" style="width:33%"></div>
+</div>
+<br>
+<div style="width:100%"> 
+    <div id="embed3" style="width:33%"></div>
+    <div id="embed4" style="width:33%"></div>
+    <div id="embed5" style="width:33%"></div>
+</div>
+<br>
+<div style="width:100%"> 
+    <div id="embed6" style="width:33%"></div>
+    <div id="embed7" style="width:33%"></div>
+    <div id="embed8" style="width:33%"></div>
+    <div id="embed9" style="width:33%"></div>
+</div>
+
 <script type="text/javascript">
 x = ["xqcow","ludwig","jellypeanut","5uppp"]
   var options0 = {
