--- a/index.html
+++ b/index.html
@@ -10,27 +10,44 @@
     <meta property="og:description" content="">
     <meta property="og:image" content="./funeemonkee.jpg">
 </head>
+<style>
+#bigshit {
+    width: 100%;
+    display: flex;
+}
+
+#smallshit {
+    float: left;
+    width: 33%;
+    flex: 0 0 33%;
+}
+
+#smallshit25 {
+    float: left;
+    flex: 0 0 25%;
+}
+</style>
 <body>
 
 <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
 
-<div style="width:100%"> 
-    <div id="embed0" style="width:33%"></div>
-    <div id="embed1" style="width:33%"></div>
-    <div id="embed2" style="width:33%"></div>
+<div style="width:100%" class="bigshit"> 
+    <div id="embed0" class="smallshit"></div>
+    <div id="embed1" class="smallshit"></div>
+    <div id="embed2" class="smallshit"></div>
 </div>
 <br>
-<div style="width:100%"> 
-    <div id="embed3" style="width:33%"></div>
-    <div id="embed4" style="width:33%"></div>
-    <div id="embed5" style="width:33%"></div>
+<div style="width:100%" class="bigshit">  
+    <div id="embed3" class="smallshit"></div>
+    <div id="embed4" class="smallshit"></div>
+    <div id="embed5" class="smallshit"></div>
 </div>
 <br>
-<div style="width:100%"> 
-    <div id="embed6" style="width:25%"></div>
-    <div id="embed7" style="width:25%"></div>
-    <div id="embed8" style="width:25%"></div>
-    <div id="embed9" style="width:25%"></div>
+<div style="width:100%" class="bigshit">  
+    <div id="embed6" class="smallshit25"></div>
+    <div id="embed7" class="smallshit25"></div>
+    <div id="embed8" class="smallshit25"></div>
+    <div id="embed9" class="smallshit25"></div>
 </div>
 
 <script type="text/javascript">
