--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <meta property="og:image" content="./funeemonkee.jpg">
 </head>
 <style>
-#bigshit {
+.bigshit {
     width: 100%;
     display: flex;
 }
 
-#smallshit {
+.smallshit {
     float: left;
     width: 33%;
     flex: 0 0 33%;
 }
 
-#smallshit25 {
+.smallshit25 {
     float: left;
     flex: 0 0 25%;
 }
