--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
     <meta property="og:image" content="./funeemonkee.jpg">
 </head>
 <style>
+.boss {
+    height: 1080;
+    width: 1920;
+}
 .bigshit {
     width: 100%;
+    height: 33%;
     display: flex;
 }
 
@@ -30,7 +35,7 @@
 <body>
 
 <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
-
+<div class="boss">
 <div style="width:100%" class="bigshit"> 
     <div id="embed0" class="smallshit"></div>
     <div id="embed1" class="smallshit"></div>
@@ -49,7 +54,7 @@
     <div id="embed8" class="smallshit25"></div>
     <div id="embed9" class="smallshit25"></div>
 </div>
-
+</div>
 <script type="text/javascript">
 x = ["xqcow","ludwig","jellypeanut","5uppp"]
   var options0 = {
