--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
 
 <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
 <div class="boss">
-<div style="width:100%" class="bigshit"> 
+<div class="bigshit"> 
     <div id="embed0" class="smallshit"></div>
     <div id="embed1" class="smallshit"></div>
     <div id="embed2" class="smallshit"></div>
 </div>
 <br>
-<div style="width:100%" class="bigshit">  
+<div class="bigshit">  
     <div id="embed3" class="smallshit"></div>
     <div id="embed4" class="smallshit"></div>
     <div id="embed5" class="smallshit"></div>
 </div>
 <br>
-<div style="width:100%" class="bigshit">  
+<div class="bigshit">  
     <div id="embed6" class="smallshit25"></div>
     <div id="embed7" class="smallshit25"></div>
     <div id="embed8" class="smallshit25"></div>
