--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <style>
 .boss {
-    height: 1080;
-    width: 1920;
+    height: 1080px;
+    width: 1920px;
 }
 .bigshit {
     width: 100%;
-    height: 33%;
+    height: 360px;
     display: flex;
     align-content: center;
 }
